test/positive/feature_this.java

public class feature_this {
  public feature_this() {}
  public feature_this returnThis() {
    return this;
  }
}

