test/negative/feature_superfieldaccess/A.java
public class A {
  public A() {}
  public int f;
}
